# stereo3d

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
blender/: stereo_composite.py
src/: depth.py  encode.py  extract.py  pipeline.py  stereo.py  stream.py
tests/: conftest.py  test_depth.py  test_encode.py  test_extract.py  test_pipeline.py  test_stereo.py
