[project]
name = "stereo3d"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "torch",
    "torchvision",
    "opencv-contrib-python",
    "numpy",
    "pillow",
    "tqdm",
    "timm",
]

[dependency-groups]
dev = ["ruff", "pre-commit", "pytest"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: downloads models or runs full pipeline (deselect with '-m \"not slow\"')",
    "integration: requires ffmpeg installed",
]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
